--- a/index.jade
+++ b/index.jade
@@ -20,13 +20,24 @@ html(lang='en')
                     li 
                     li
             .load
-                .avatar
+                .h3 
+                    .text
+                        strong T
+                        strong a
+                        strong n
+
                     span Tan
-                .load_bar
-                    span
+                //- .avatar
+                //-     span Tan
+                //- .load_bar
+                //-     span
         .wrap
             audio(id="menuSound", controls="" ,hidden="hidden" )
                 <source src="sound/menu.mp3" type="audio/mpeg">
+            
+            audio(id="Sound", controls="" ,hidden="hidden")
+                <source src="sound/vermont-music-short.mp3" type="audio/mpeg" >
+            
             
             .wrap_inner
                 .wrap_home
@@ -172,7 +183,7 @@ html(lang='en')
                                     a(href="https://daoduytan.github.io/acocean", target="_blank", title="Go to site")
                                         .mockup(style="background-image:url(img/works/acocean.jpg)")
                                             span(style="background: rgba(239, 104, 89, 0.2)")
-                                        h3.namWork.wow.slideInLeft acocean
+                                        h3.namWork.wow.slideInRight acocean
                                         span.letter(style="color: rgba(239, 104, 89, 0.9)") A
                                         .text-center 
                                             span Design + html/css
@@ -190,7 +201,7 @@ html(lang='en')
                                     a(href="https://daoduytan.github.io/upbeat-talent", target="_blank", title="Go to site")
                                         .mockup(style="background-image:url(img/works/upbeat-talent.jpg)")
                                             span(style="background: rgba(255, 190, 33, 0.2)")
-                                        h3.namWork.wow.slideInLeft Upbeat talent
+                                        h3.namWork.wow.slideInRight Upbeat talent
                                         span.letter(style="color: rgba(255, 190, 33, 0.9)") T
                                         .text-center 
                                             span Design + html/css
@@ -208,7 +219,7 @@ html(lang='en')
                                     a(href="http://32dentalstudio.com", target="_blank", title="Go to site")
                                         .mockup(style="background-image:url(img/works/32.jpg)")
                                             span(style="background: rgba(104, 14, 52, 0.2)")
-                                        h3.namWork.wow.slideInLeft 32dentalstudio
+                                        h3.namWork.wow.slideInRight 32dentalstudio
                                         span.letter(style="color: rgba(104, 14, 52, 0.9)") 3
                                         .text-center 
                                             span Code html/css
@@ -226,7 +237,7 @@ html(lang='en')
                                     a(href="https://huydong.com", target="_blank")
                                         .mockup(style="background-image:url(img/works/huydong.jpg)")
                                             span(style="background: rgba(39, 146, 111, 0.2)")
-                                        h3.namWork.wow.slideInLeft huydong.com
+                                        h3.namWork.wow.slideInRight huydong.com
                                         span.letter(style="color: rgba(39, 146, 111, 0.9)") h
                                         .text-center 
                                             span Code html/css
