--- a/sass/_res.sass
+++ b/sass/_res.sass
@@ -21,6 +21,10 @@
 			&:nth-child(n+5)
 				display: none
 
+	.loading
+		.h3 
+			font-size: 120px
+
 	.contact .btnBack
 		left: 15px
 	// banner 
